[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6" # make sure this is the latest version
rand = "0.8.5"
itertools = "0.10.3"
bevy_prototype_lyon = "0.4.0"
bevy_rapier2d = { version = "*", features = [ "enhanced-determinism" ] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!